--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Ashiful\\Crud\\": "src"
+            "Ashiful\\LangTranslate\\": "src"
         }
     },
     "config": {
