--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0",
+        "illuminate/support": "^8.0|^9.0",
         "laravel/framework": "^5.5|^6.0|^7.0|^8.0|^9.0",
         "laravelcollective/html": "^5.4|^6.0|^7.0|^8.0"
     },
